--- a/theme/Abp.AspNetCore.Mvc.UI.Theme.Front/wwwroot/assets/css/main-custom.css
+++ b/theme/Abp.AspNetCore.Mvc.UI.Theme.Front/wwwroot/assets/css/main-custom.css
@@ -563,7 +563,36 @@ table.dataTable thead {
         opacity: 0;
     }
 }
+/**/
 
+.table-responsive,
+.dataTables_scrollBody {
+    overflow: visible !important;
+}
+
+.table-responsive-disabled .dataTables_scrollBody {
+    overflow: hidden !important;
+}
+
+.toast {
+    background-color: #030303
+}
+
+.toast-success {
+    background-color: #51A351
+}
+
+.toast-error {
+    background-color: #BD362F
+}
+
+.toast-info {
+    background-color: #2F96B4
+}
+
+.toast-warning {
+    background-color: #F89406
+}
 /**/
 @media (min-width: 768px) {
     .modal-lg .modal-header, .modal-xl .modal-header {
