--- a/src/Tankerz.Web/Pages/Blogs/Index.cshtml
+++ b/src/Tankerz.Web/Pages/Blogs/Index.cshtml
@@ -20,7 +20,7 @@
                 <abp-card-title>@L["Blogs"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-right">
-                <abp-button id="NewBlogButton"
+                <abp-button id="CreateNew"
                             text="@L["NewBlog"].Value"
                             icon="plus"
                             button-type="Primary" />
