UPDATE: Add [Authorize] all pages + update any label

--- a/src/Tankerz.Web/Pages/Blogs/EditModal.cshtml
+++ b/src/Tankerz.Web/Pages/Blogs/EditModal.cshtml
@@ -11,7 +11,7 @@
 <form asp-page="/Blogs/EditModal" onkeydown="return event.key != 'Enter';" id="form-with-ck">
     <abp-input asp-for="Blog.Id" />
     <abp-modal centered="true" scrollable="true" size="ExtraLarge" id="myModal">
-        <abp-modal-header class="text-uppercase" title="Thêm mới tin tức"></abp-modal-header>
+        <abp-modal-header class="text-uppercase" title="Chỉnh sửa tin tức"></abp-modal-header>
         <abp-modal-body class="custom-modal-body">
             <!-- Nav -->
             <div class="text-left">
