--- a/src/Tankerz.Web/Pages/Products/EditModal.cshtml
+++ b/src/Tankerz.Web/Pages/Products/EditModal.cshtml
@@ -12,7 +12,7 @@
     <abp-input asp-for="Product.Id" />
     <abp-input asp-for="Product.ProductCategoryId" />
     <abp-modal centered="true" scrollable="true" size="ExtraLarge" id="myModal">
-        <abp-modal-header class="text-uppercase" title="Thêm mới tin tức"></abp-modal-header>
+        <abp-modal-header class="text-uppercase" title="chỉnh sửa sản phẩm"></abp-modal-header>
         <abp-modal-body class="custom-modal-body">
             <!-- Nav -->
             <div class="text-left">
