--- a/theme/Abp.AspNetCore.Mvc.UI.Theme.Front/Themes/Front/Layouts/Account.cshtml
+++ b/theme/Abp.AspNetCore.Mvc.UI.Theme.Front/Themes/Front/Layouts/Account.cshtml
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <small class="text-cap mb-4">Trusted by the world's best teams</small>
+                        <small class="text-cap mb-4">Provided by Nhat05</small>
                         <div class="w-85 mx-auto">
                             <div class="row justify-content-between">
                                 <div class="col">
