--- a/src/Tankerz.Web/Pages/Blogs/Index.cshtml
+++ b/src/Tankerz.Web/Pages/Blogs/Index.cshtml
@@ -21,13 +21,13 @@
             </abp-column>
             <abp-column size-md="_6" class="text-right">
                 <abp-button id="CreateNew"
-                            text="@L["NewBlog"].Value"
+                            text="@L["AddNew"].Value"
                             icon="plus"
                             button-type="Primary" />
             </abp-column>
         </abp-row>
     </abp-card-header>
     <abp-card-body>
-        <abp-table striped-rows="false" id="BlogsTable"></abp-table>
+        <abp-table striped-rows="false" id="main_table--page"></abp-table>
     </abp-card-body>
 </abp-card>
