--- a/src/Tankerz.Web/Pages/ProductCategories/CreateModal.cshtml
+++ b/src/Tankerz.Web/Pages/ProductCategories/CreateModal.cshtml
@@ -10,7 +10,7 @@
 }
 <form asp-page="/ProductCategories/CreateModal" onkeydown="return event.key != 'Enter';" id="form-with-ck">
     <abp-modal centered="true" scrollable="true" size="ExtraLarge" id="myModal">
-        <abp-modal-header class="text-uppercase" title="Thêm mới tin tức"></abp-modal-header>
+        <abp-modal-header class="text-uppercase" title="Thêm mới danh mục sản phẩm"></abp-modal-header>
         <abp-modal-body class="custom-modal-body">
             <!-- Nav -->
             <div class="text-left">
