--- a/src/Tankerz.Web/Pages/ProductCategories/Index.cshtml
+++ b/src/Tankerz.Web/Pages/ProductCategories/Index.cshtml
@@ -24,7 +24,7 @@
     <abp-card-header>
         <abp-row>
             <abp-column size-md="_6">
-                <abp-card-title>@L["ProductCategories"]</abp-card-title>
+                <abp-card-title>@L["ProductCategory"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-right">
                 <abp-button id="CreateNew"
