--- a/src/Tankerz.Web/Pages/Products/Index.cshtml
+++ b/src/Tankerz.Web/Pages/Products/Index.cshtml
@@ -22,7 +22,7 @@
     <abp-card-header>
         <abp-row>
             <abp-column size-md="_6">
-                <abp-card-title>@L["Products"]</abp-card-title>
+                <abp-card-title>@L["Product"]</abp-card-title>
             </abp-column>
             <abp-column size-md="_6" class="text-right">
                 @if (Int32.TryParse(Request.Query["category"], out int numValue))
